tests/ui/attempted_coercion.stderr
error[E0308]: mismatched types
 --> tests/ui/attempted_coercion.rs:9:17
  |
8 | #[distributed_slice(SLICE)]
  | --------------------------- arguments to this function are incorrect
9 | static ELEMENT: &&str = &"uhoh";
  |                 ^^^^^ expected `str`, found `&'static str`
  |
  = note: expected fn pointer `fn() -> &'static &'static str`
             found fn pointer `fn() -> &'static &'static &'static str`
note: method defined here
 --> src/distributed_slice.rs
  |
  |     pub unsafe fn private_typecheck(self, get: fn() -> &'static T) {
  |                   ^^^^^^^^^^^^^^^^^
